feat: implement device-based API key management with consistent table naming
- Add deviceInfo field to AuthenticationRequest for device tracking
- Implement smart API key reuse within 7-day window for same device
- Add role-based key management (admin: multi-device, customer: single-device)
- Rename tables for consistency: user_api_keys->rc_usr_api_kys, audit_logs->wt_adt_lgs, push_notification_tokens->rc_pn_tokens
- Update cron schedule for key cleanup to 9 PM daily
- Add device info extraction from User-Agent header
- Implement dual authentication flow: API Key + JWT support